<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE0E0">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:clickable="false"
        android:focusable="false"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_modified" />

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="610dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_filtroObra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        android:paddingLeft="5sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/edt_filtroLocalizacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edt_filtroLocalizacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/Localizacion"
        android:inputType="textPersonName"
        android:paddingLeft="5sp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/img_buscarObra"
        app:layout_constraintStart_toEndOf="@+id/edt_filtroObra"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/img_buscarObra"
        android:layout_width="39dp"
        android:layout_height="44dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:onClick="realizarBusqueda"
        app:layout_constraintEnd_toStartOf="@+id/img_addObra"
        app:layout_constraintStart_toEndOf="@+id/edt_filtroLocalizacion"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/buscar" />

    <ImageView
        android:id="@+id/img_addObra"
        android:layout_width="39dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="25dp"
        android:visibility="invisible"
        android:onClick="newObra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_buscarObra"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_obras"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_buscarObra" />

    <Button
        android:id="@+id/bt_obras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#388E3C"
        android:text="@string/Obras"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_user"
        app:layout_constraintEnd_toStartOf="@+id/bt_materiales"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_obras" />

    <Button
        android:id="@+id/bt_materiales"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/Materiales"
        android:textSize="11sp"
        android:onClick="goToMateriales"
        app:layout_constraintBottom_toTopOf="@+id/txt_user"
        app:layout_constraintEnd_toStartOf="@+id/bt_finanzas"
        app:layout_constraintStart_toEndOf="@+id/bt_obras"
        app:layout_constraintTop_toBottomOf="@+id/rv_obras" />

    <Button
        android:id="@+id/bt_finanzas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/Finanzas"
        android:textSize="11sp"
        android:onClick="goToFinanzas"
        app:layout_constraintBottom_toTopOf="@+id/txt_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_materiales"
        app:layout_constraintTop_toBottomOf="@+id/rv_obras" />

    <ImageView
        android:id="@+id/img_salir"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:onClick="salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_finanzas"
        app:srcCompat="@drawable/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>