<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE0E0"
    tools:context=".Activities.Materiales.DetallesMaterialesActivity">

    <ImageView
        android:id="@+id/img_logo4"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="105dp"
        android:clickable="false"
        android:focusable="false"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_modified" />

    <TextView
        android:id="@+id/txt_detalle_material"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo4" />

    <EditText
        android:id="@+id/edt_detalle_unidadMedida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/unidadMedida"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detalle_material" />

    <EditText
        android:id="@+id/edt_detalle_abreviatura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/abreviaturaUnidadMedida"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_unidadMedida" />

    <EditText
        android:id="@+id/edt_detalle_familia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/familia"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_abreviatura" />

    <ImageView
        android:id="@+id/img_detalleMaterial_editar"
        android:layout_width="39dp"
        android:layout_height="44dp"
        android:layout_marginStart="186dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="186dp"
        android:onClick="editarMaterial"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_detalle_familia"
        app:srcCompat="@drawable/edit" />

    <Button
        android:id="@+id/bt_detalleMaterial_aceptarCambios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#4CAF50"
        android:onClick="updateMaterial"
        android:text="@string/aceptar"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/bt_detalleMaterial_cancelarCambios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detalleMaterial_editar" />

    <Button
        android:id="@+id/bt_detalleMaterial_cancelarCambios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="cancelCambios"
        android:text="@string/Cancelar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_detalleMaterial_aceptarCambios"
        app:layout_constraintTop_toBottomOf="@+id/img_detalleMaterial_editar" />

    <TextView
        android:id="@+id/txt_detalleMaterial_user"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="620dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>